# am-master-thesis-sharpened-cg-bound

./: .gitignore  .gitmodules  README.md  SETUP.md  activate_env.py  bibliography.bib  compile_latex.py  generate_figures.py  generate_meshes.py  preamble.tex  requirements.txt  setup.py  setup_env.py  tudelft-report.cls  vscode_settings.json
am-thesis-lib/: generate_meshes.py  pyproject.toml  setup.py  setup_env.py
am-thesis-lib/src/project/: __init__.py  gpu_interface.py  plot_utils.py  root.py
am-thesis-lib/src/project/fespace/: fespace.py
am-thesis-lib/src/project/logger/: logger.py
am-thesis-lib/src/project/meshes/: mesh.py
am-thesis-lib/src/project/preconditioners/: preconditioners.py
am-thesis-lib/src/project/problems/: problem.py
am-thesis-lib/src/project/solvers/: custom_cg.py  direct_sparse.py
clibs/: Makefile  custom_cg.cpp  custom_cg.py
data/: coarse_mesh.vol  fine_mesh.vol
defense/: README.md  bibliography.json  defense.py  defense.tex  preamble.tex
final_thesis/: README.md  final_thesis.tex
frontmatter/: summary.tex  title-report.tex  title-thesis.tex
hcmsfem/: setup.py  setup_env.py
interim_presentation/: README.md  feedback-alexander.md  interim-presentation.tex  interim_presentation.tex  preamble.tex
interim_thesis/: README.md  interim_thesis.tex
lib/: __init__.py  custom_cg.py  gpu_interface.py  plot_utils.py  utils.py
manuscript/: manuscript.tex
meetings/: 2024-11-08.md  2024-12-02.md  2024-12-12.md  2025-01-06.md  2025-02-10.md  2025-05-26.md  2025-06-11.md  2025-07-15.md  2025-07-25.md
project/: root.py
(+248 files in other folders)
